--- a/vista2.html
+++ b/vista2.html
@@ -115,7 +115,7 @@
     </div>
     <div class="ABM-Contenedor">
         <div class="ABM-Inputs">
-            <h2>Form Modificacion/Eliminacion</h2>
+            <h2>Form Abm</h2>
             <br>
             <label for="id">id: </label>
             <input id="id" type="text" name="id">
